--- a/src/index.css
+++ b/src/index.css
@@ -457,3 +457,21 @@
             opacity: 1;
           }
         }
+
+
+
+html, body {
+  overflow: auto;     
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+
+
+
